--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 HTTP_SERVER_PORT=3000
 GIN_MODE=release
+MYSQL_CONNECTION_STRING=user:pass@tcp(127.0.0.1:3306)/dbname?charset=utf8mb4&parseTime=True&loc=Local
