--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 version: 3.0.0
 services:
-  mysql:
+  db:
     image: mysql:8.0.32
     ports:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=P@ssw0rd
       - MYSQL_DATABASE=garnbarn
+
+  phpmyadmin:
+    image: phpmyadmin:5.2.1
+    restart: always
+    ports:
+      - 8080:80
+    links:
+      - db
