--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ HTTP_SERVER_PORT=3000
 GIN_MODE=release
 FIREBASE_CONFIG_FILE=/path/to/credential.json
 MYSQL_CONNECTION_STRING=root:P@ssw0rd@tcp(127.0.0.1:3306)/garnbarn?charset=utf8mb4&parseTime=True&loc=Local
+REDIS_CONNECTION_STRING=localhost:6379
+REDIS_PASSWORD=P@ssw0rd
