--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,19 @@ version: 3.0.0
 services:
   db:
     image: mysql:8.0.32
+    restart: always
     ports:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=P@ssw0rd
       - MYSQL_DATABASE=garnbarn
+
+  redis:
+    image: redis:alpine3.18
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass P@ssw0rd
 
   phpmyadmin:
     image: phpmyadmin:5.2.1
