--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ HTTP_SERVER_PORT=3000
 GIN_MODE=release
 FIREBASE_CONFIG_FILE=/path/to/credential.json
 MYSQL_CONNECTION_STRING=root:P@ssw0rd@tcp(127.0.0.1:3306)/garnbarn?charset=utf8mb4&parseTime=True&loc=Local
+ALLOW_ORIGINS=http://localhost:8081
+ALLOW_METHODS=GET,POST,DELETE,OPTIONS
+ALLOW_HEADERS=Origin,Authorization,Content-Type
+EXPOSE_HEADERS=Content-Length
+ALLOW_CREDENTIALS=true
+MAX_AGE=12
