fix: environment variable and unused comment

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ MYSQL_CONNECTION_STRING=root:P@ssw0rd@tcp(127.0.0.1:3306)/garnbarn?charset=utf8m
 REDIS_CONNECTION_STRING=localhost:6379
 REDIS_PASSWORD=P@ssw0rd
 RATE_LIMIT_STRING=5-S
+REDIS_DB=0
