feat: Add AES encryption in the tag api

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ ALLOW_HEADERS=Origin,Authorization,Content-Type
 EXPOSE_HEADERS=Content-Length
 ALLOW_CREDENTIALS=true
 MAX_AGE=12
+
+# Database AES Key
+TAG_TABLE_AES_KEY=
+ASSIGNMENT_TABLE_AES_KEY=
+ACCOUNT_TABLE_AES_KEY=
