--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ MAX_AGE=12
 TAG_TABLE_AES_KEY=
 ASSIGNMENT_TABLE_AES_KEY=
 ACCOUNT_TABLE_AES_KEY=
+
+# OAuth Token
+OAUTH_CLIENT_ID=
+OAUTH_CLIENT_SECRET=
